# sqlx-view

./: .env  Cargo.toml  README.md  db-init.sql  docker-compose.yaml  run.sh
src/: main.rs
