[package]
name = "sqlx-view"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.37", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid", "time", "chrono"] }
